Removed the sticky plugin call from the javascript. Fixed the menu to jumpt at the exact position. Added the behaviour to the dropbox menu on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -345,13 +345,27 @@ footer {
     /* Navigation Menu Mobile*/
 
     select#menu {
-        background-color: #a4a4a4;
         color: #5f5f5f;
         border: none;
         text-align: center;
         font-size: 1.2em;
         font: "Myriad Pro", "Sans-Serif", Verdana;
         height: 40px;
+        -moz-appearance: none;
+        -webkit-appearance: none;
+        border-radius: 0;
+        background: #d4d4d5; /* Old browsers */
+        background: -moz-linear-gradient(top,  #d4d4d5 0%, #c0c1c1 100%); /* FF3.6+ */
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#d4d4d5), color-stop(100%,#c0c1c1)); /* Chrome,Safari4+ */
+        background: -webkit-linear-gradient(top,  #d4d4d5 0%,#c0c1c1 100%); /* Chrome10+,Safari5.1+ */
+        background: -o-linear-gradient(top,  #d4d4d5 0%,#c0c1c1 100%); /* Opera 11.10+ */
+        background: -ms-linear-gradient(top,  #d4d4d5 0%,#c0c1c1 100%); /* IE10+ */
+        background: linear-gradient(to bottom,  #d4d4d5 0%,#c0c1c1 100%); /* W3C */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d4d4d5', endColorstr='#c0c1c1',GradientType=0 ); /* IE6-9 */
+    }
+
+    select#menu:hover, select#menu:active {
+        box-shadow: none;
     }
 
 
